{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "XRRightController",
            "id": "9cd9c337-236f-465f-98e4-5fe9226fd843",
            "actions": [
                {
                    "name": "position",
                    "type": "Value",
                    "id": "b236dec2-b493-4a8c-acfd-08f9e5f8d4ee",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "rotation",
                    "type": "Value",
                    "id": "3e34ed57-e8aa-4baa-a2c8-e90c5b7b6819",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerAxis",
                    "type": "Value",
                    "id": "7e598f47-46ba-41c2-8eae-aec576b2442c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripAxis",
                    "type": "Value",
                    "id": "bb1975ef-fe1e-4271-aafa-e64cf09bd716",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerBtn",
                    "type": "Button",
                    "id": "d237d04b-923d-4624-a0e9-90701f3329d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AButton",
                    "type": "Button",
                    "id": "e6b81eb5-306b-4f5e-84c1-3357e27399f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "612436d9-34f2-4d04-b30d-97b90ce4a171",
                    "path": "<XRController>{RightHand}/pointerPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f803e5f7-18a1-4fc2-957d-6e69db28dcc8",
                    "path": "<XRController>{RightHand}/pointerRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94ba05bd-647e-4cca-b5d9-72264298ee91",
                    "path": "<XRController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "262a708c-83da-4460-9d75-225580630aef",
                    "path": "<XRController>{RightHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f8514ca-acc6-4d2c-a48b-109eec86b6e3",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e03bc0f-981f-416b-9ea1-6ea907cb3b78",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "XRLeftController",
            "id": "fd444f05-669e-49ae-ae91-6d88f4b64461",
            "actions": [
                {
                    "name": "position",
                    "type": "Value",
                    "id": "edc9d9ca-d035-4805-9c88-08bf05aece3d",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "rotation",
                    "type": "Value",
                    "id": "79fa61df-a04f-4104-b228-f7d6267c4fb7",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerAxis",
                    "type": "Value",
                    "id": "299f520f-df26-4a85-9521-c3052fbbf94d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripAxis",
                    "type": "Value",
                    "id": "e4df9c06-ced0-413a-a427-ab6d5caedb4d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MenuButton",
                    "type": "Button",
                    "id": "3d1cc6f1-d68f-4dea-9afc-066217081c5c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerBtn",
                    "type": "Button",
                    "id": "b03c7e39-6667-4d32-897d-2a547da3f1c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftAnalogStickAxisY",
                    "type": "Value",
                    "id": "31996e2a-f225-410a-ab3e-c1db85299dbc",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d8438b77-c8cd-4f62-a0e6-922e367db466",
                    "path": "<XRController>{LeftHand}/pointerPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7eb59382-4324-4820-9e24-00393d965045",
                    "path": "<XRController>{LeftHand}/pointerRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4a55fd6-2241-4fb6-a655-878898f5c47f",
                    "path": "<XRController>{LeftHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c947102c-d63c-4004-8f68-5e06ffc06cb7",
                    "path": "<XRController>{LeftHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b70efff-4b88-4195-81ce-5e5cf1067cd6",
                    "path": "<XRController>{LeftHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aae44b9b-da6c-4112-a6ce-34aab5e9caff",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ac5e9e0-e8d7-492f-8cf5-03d0d45c459a",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftAnalogStickAxisY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}